--- a/config-test.yml
+++ b/config-test.yml
@@ -1,2 +1,2 @@
 config:
-  info: "master branch,springcloud-config/config-test.yml version=1 test test"
+  info: "master branch,springcloud-config/config-test.yml version=1 testHost"
